FreeST/test/Programs/InvalidTests/Kinding/WrongKindAnnotationInData/WrongKindAnnotationInData.fst
data T : 1S = A !Int | B Char